src/test/deca/codegen/valid/ourTest/test_assign_mult.deca
// Description:
//    Test de l'utilisation de variables entières et d'une expression arithmétique simple.
//
// Resultats:
//12 -2

{
    int x=2;
    int y=2;
    int z;
    z=2*x+4*y;
    print(z," ");
    z=2*x-3*y;
    print(z);
}